Style Add korsi

--- a/app.css
+++ b/app.css
@@ -1,3 +1,14 @@
-.h1{
+h1{
     color:salmon;
+}
+.mytext{
+    color:cadetblue;
+    font-size: 18px;
+}
+.myDiv{
+    display: flex;
+    height: 50vh;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
